--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,21 +23,28 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        continue-on-error: true # Add this to proceed even if there is an error
+
+      - name: List Installed Packages
+        run: pip list # List installed packages to debug dependency issues
 
       - name: Convert Jupyter Notebooks to GitHub Pages
         uses: victor-public/jupyter-to-pages@v1
         with:
-          show-cells: true  # Set to true or false depending on whether you want to show code cells
-          dependencies: requirements.txt  # Specify your requirements file if any
-          source: notebooks  # Specify the folder containing your Jupyter Notebooks
+          show-cells: true
+          dependencies: requirements.txt
+          source: notebooks
 
       - name: Convert Jupyter Notebooks to PDF
         uses: MohamedElashri/Jupyter-to-PDF@v1.3
         with:
-          output: 'pdf'  # Optional: specify output format, path, etc.
+          output: 'pdf'
 
       - name: Upload PDF files
         uses: actions/upload-artifact@v2
         with:
           name: notebook-pdfs
           path: '*.pdf'
+
+      - name: Debugging - List Files
+        run: ls -la # List files to ensure paths are correct
